--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -32,13 +32,10 @@ jobs:
           name: html-build
           path: docs/_html/html/*
 
-      - name: Create CNAME file
-        run: mv docs/CNAME docs/_html/html
-
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         # If push to main, deploy to pages
-        if: ${{ github.ref == 'refs/heads/main' }}
+        # if: ${{ github.ref == 'refs/heads/main' }}
         with:
           publish_branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
