added vscode and os specfic flutter directories to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 .history
 .svn/
 migrate_working_dir/
+.vscode
 
 # IntelliJ related
 *.iml
@@ -30,6 +31,9 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
+windows
+macos
+linux
 
 # Symbolication related
 app.*.symbols
