--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_speed_dial: ^7.0.0
   syncfusion_flutter_datepicker: ^25.1.37
   intl: ^0.19.0
+  postgres: ^3.1.2
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
