--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.19.0
   postgres: ^3.1.2
   crypto: ^3.0.3
+  toggle_switch: ^2.3.0
 
 dev_dependencies:
   flutter_test:
