--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   postgres: ^3.1.2
   crypto: ^3.0.3
   toggle_switch: ^2.3.0
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
